[package]
name = "ssb-handshake"
version = "0.5.0"
authors = ["sean billig <sean.billig@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "Secret-handshake protocol for Secure Scuttlebutt"
repository = "https://github.com/sunrise-choir/ssb-handshake"
documentation = "https://docs.rs/ssb-handshake/"
readme = "README.md"
keywords = ["secret-handshake", "handshake", "ssb", "scuttlebutt", "shs"]

[dependencies]
futures = "0.3.1"
quick-error = "1.2.3"
ssb-crypto = { version = "0.1.4", git = "https://github.com/leo-lb/ssb-crypto" }

[dev-dependencies]
async-ringbuffer = { version = "0.5.4", git = "https://github.com/leo-lb/async-ringbuffer" }
hex = "0.4.0"
futures-util = "0.3.1"
readwrite = "0.1.1"
